--- a/services/cws.service
+++ b/services/cws.service
@@ -4,7 +4,8 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --privileged --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] brianbbsu/cms:1.4rc1
+ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] brianbbsu/cms:1.4rc1
+ExecStop=/usr/bin/docker stop %n
 
 [Install]
 WantedBy=multi-user.target
