--- a/services/nginx.service
+++ b/services/nginx.service
@@ -5,6 +5,7 @@ Requires=docker.service
 
 [Service]
 ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.nginx.conf:/etc/nginx/nginx.conf:ro --network=host nginx:alpine
+ExecStop=/usr/bin/docker stop %n
 
 [Install]
 WantedBy=multi-user.target
