--- a/services/worker.service
+++ b/services/worker.service
@@ -5,6 +5,7 @@ Requires=docker.service
 
 [Service]
 ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --privileged --network=host -e CMS_INSTANCE_TYPE=WORKER brianbbsu/cms:1.4rc1
+ExecStop=/usr/bin/docker stop %n
 
 [Install]
 WantedBy=multi-user.target
