Added some more services

--- a/config/cms.nginx.conf
+++ b/config/cms.nginx.conf
@@ -20,6 +20,11 @@ http {
             proxy_pass http://localhost:8889/;
         }
 
+	    location /ranking/ {
+            proxy_pass http://localhost:8890/;
+            proxy_buffering off;
+        }
+
         location / {
             proxy_pass http://localhost:8888/;
         }
