--- a/services/cws.service
+++ b/services/cws.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=CMS web Service
-After=docker.service
+After=docker.service rws.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] brianbbsu/cms:1.4rc1
+ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] brianbbsu/cms:1.4rc1
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
