--- a/services/proxy.service
+++ b/services/proxy.service
@@ -4,7 +4,7 @@ Description=Google Cloud SQL Proxy Service
 [Service]
 ExecStartPre=/usr/bin/wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O /cloud_sql_proxy
 ExecStartPre=/bin/chmod +x /cloud_sql_proxy
-ExecStart=/cloud_sql_proxy -instances=cms-server-211312:asia-east1:cmsdb=tcp:5432
+ExecStart=/cloud_sql_proxy -instances=GCP_PROJ:GCP_ZONE:cmsdb=tcp:5432
 
 [Install]
 WantedBy=multi-user.target
