Add load balancer for CWS

--- a/config/example.cms.conf
+++ b/config/example.cms.conf
@@ -10,7 +10,10 @@
         "Checker":           [["main.GCP_ZONE.c.GCP_PROJ.internal", 22000]],
         "EvaluationService": [["main.GCP_ZONE.c.GCP_PROJ.internal", 25000]],
         "Worker":            [],
-        "ContestWebServer":  [["main.GCP_ZONE.c.GCP_PROJ.internal", 21000]],
+        "ContestWebServer":  [["main.GCP_ZONE.c.GCP_PROJ.internal", 21000],
+                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21001],
+                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21002],
+                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21003]],
         "AdminWebServer":    [["main.GCP_ZONE.c.GCP_PROJ.internal", 21100]],
         "ProxyService":      [["main.GCP_ZONE.c.GCP_PROJ.internal", 28600]],
         "PrintingService":   [["main.GCP_ZONE.c.GCP_PROJ.internal", 25123]]
@@ -21,16 +24,22 @@
         "TestFileCacher":    [["localhost", 27501]]
     },
 
-    "database": "postgresql+psycopg2://cmsuser:cmsdbpassword@localhost:5432/cmsdb",
+    "database": "postgresql+psycopg2://cmsuser:yourDBpasswordhere@localhost:5432/cmsdb",
     "database_debug": false,
     "twophase_commit": false,
     "keep_sandbox": false,
     "max_file_size": 1048576,
 
-    "secret_key":             "8ebbbbbbbbb102eab0bcb6b9b8b1b1bb",
+    "secret_key":             "12acdb4262472e2eeea1523619284929",
     "tornado_debug": false,
-    "contest_listen_address": [""],
-    "contest_listen_port":    [8888],
+    "contest_listen_address": ["127.0.0.1", 
+                               "127.0.0.1", 
+                               "127.0.0.1", 
+                               "127.0.0.1"],
+    "contest_listen_port":    [8891, 
+                               8892, 
+                               8893, 
+                               8894],
     "cookie_duration": 10800,
     "submit_local_copy":      true,
     "submit_local_copy_path": "%s/submissions/",
@@ -38,7 +47,7 @@
     "max_submission_length": 100000,
     "max_input_length": 5000000,
     "stl_path": "/usr/share/doc/stl-manual/html/",
-    "admin_listen_address": "",
+    "admin_listen_address": "127.0.0.1",
     "admin_listen_port":    8889,
     "admin_cookie_duration": 36000,
 
