--- a/config/example.cms.nginx.conf
+++ b/config/example.cms.nginx.conf
@@ -12,6 +12,15 @@ http {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
+    upstream cws {
+        sticky;
+        keepalive 500;
+        server localhost:8891;
+        server localhost:8892;
+        server localhost:8893;
+        server localhost:8894;
+    }
+
     server{
         listen     80;
         server_name _;
@@ -26,7 +35,7 @@ http {
         }
 
         location / {
-            proxy_pass http://localhost:8888/;
+            proxy_pass http://cws/;
         }
 		
 	}
