--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -3,7 +3,11 @@ GCP_PROJ: "cms-server-211312"
 GCP_ZONE: "asia-east1-b"
 MAIN_INSTANCE_TYPE: "n1-standard-1"
 WORKER_INSTANCE_TYPE: "n1-standard-1"
+MAIN_INSTANCE_IP: ""
 
 # CMS Related
 MAX_NUM_OF_WORKER: 32
-CMS_CONTEST_ID: 2
+CMS_CONTEST_ID: 1
+
+#Advance Setting
+CMS_DOCKER_IMAGE: "brianbbsu/cms:1.4rc1-cpp-only"
