--- a/services/rws.service
+++ b/services/rws.service
@@ -4,7 +4,7 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.ranking.conf:/usr/local/etc/cms.ranking.conf:ro --network=host -e CMS_INSTANCE_TYPE=RANKING brianbbsu/cms:1.4rc1
+ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.ranking.conf:/usr/local/etc/cms.ranking.conf:ro --network=host -e CMS_INSTANCE_TYPE=RANKING [CMS_DOCKER_IMAGE]
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
