--- a/services/worker.service
+++ b/services/worker.service
@@ -4,7 +4,7 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --privileged --network=host -e CMS_INSTANCE_TYPE=WORKER brianbbsu/cms:1.4rc1
+ExecStart=/usr/bin/docker run --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --privileged --network=host -e CMS_INSTANCE_TYPE=WORKER [CMS_DOCKER_IMAGE]
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
