Add log command

--- a/services/rws.service
+++ b/services/rws.service
@@ -5,7 +5,7 @@ Requires=docker.service
 
 [Service]
 ExecStartPre=/bin/mkdir /home/core/ranking
-ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.ranking.conf:/usr/local/etc/cms.ranking.conf:ro -v /home/core/ranking:/var/local/lib/cms/ranking --network=host -e CMS_INSTANCE_TYPE=RANKING [CMS_DOCKER_IMAGE]
+ExecStart=/usr/bin/docker run --rm -t --name %n -v /home/core/cms-data/cms.ranking.conf:/usr/local/etc/cms.ranking.conf:ro -v /home/core/ranking:/var/local/lib/cms/ranking --network=host -e CMS_INSTANCE_TYPE=RANKING [CMS_DOCKER_IMAGE]
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
