--- a/services/cws.service
+++ b/services/cws.service
@@ -4,7 +4,7 @@ After=docker.service rws.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] [CMS_DOCKER_IMAGE]
+ExecStart=/usr/bin/docker run --rm -t --name %n -v /home/core/cms-data/cms.conf:/usr/local/etc/cms.conf:ro --network=host -e CMS_INSTANCE_TYPE=MAIN -e CMS_CONTEST_ID=[CMS_CONTEST_ID] [CMS_DOCKER_IMAGE]
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
