--- a/services/nginx.service
+++ b/services/nginx.service
@@ -4,7 +4,7 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.nginx.conf:/etc/nginx/nginx.conf:ro --network=host imkulikov/nginx-sticky
+ExecStart=/usr/bin/docker run --rm --name %n -v /home/core/cms-data/cms.nginx.conf:/etc/nginx/nginx.conf:ro --network=host brianbbsu/nginx
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
