Use Ubuntu 16.04 VM instead of Coreos and use startup script instead of service

--- a/config/example.cms.conf
+++ b/config/example.cms.conf
@@ -4,19 +4,19 @@
     "backdoor": false,
     "core_services":
     {
-        "LogService":        [["main.GCP_ZONE.c.GCP_PROJ.internal", 29000]],
-        "ResourceService":   [["main.GCP_ZONE.c.GCP_PROJ.internal", 28000]],
-        "ScoringService":    [["main.GCP_ZONE.c.GCP_PROJ.internal", 28500]],
-        "Checker":           [["main.GCP_ZONE.c.GCP_PROJ.internal", 22000]],
-        "EvaluationService": [["main.GCP_ZONE.c.GCP_PROJ.internal", 25000]],
+        "LogService":        [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 29000]],
+        "ResourceService":   [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 28000]],
+        "ScoringService":    [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 28500]],
+        "Checker":           [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 22000]],
+        "EvaluationService": [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 25000]],
         "Worker":            [],
-        "ContestWebServer":  [["main.GCP_ZONE.c.GCP_PROJ.internal", 21000],
-                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21001],
-                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21002],
-                              ["main.GCP_ZONE.c.GCP_PROJ.internal", 21003]],
-        "AdminWebServer":    [["main.GCP_ZONE.c.GCP_PROJ.internal", 21100]],
-        "ProxyService":      [["main.GCP_ZONE.c.GCP_PROJ.internal", 28600]],
-        "PrintingService":   [["main.GCP_ZONE.c.GCP_PROJ.internal", 25123]]
+        "ContestWebServer":  [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 21000],
+                              ["main.[GCP_ZONE].c.[GCP_PROJ].internal", 21001],
+                              ["main.[GCP_ZONE].c.[GCP_PROJ].internal", 21002],
+                              ["main.[GCP_ZONE].c.[GCP_PROJ].internal", 21003]],
+        "AdminWebServer":    [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 21100]],
+        "ProxyService":      [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 28600]],
+        "PrintingService":   [["main.[GCP_ZONE].c.[GCP_PROJ].internal", 25123]]
     },
 
     "other_services":
