--- a/config/example.cms.nginx.conf
+++ b/config/example.cms.nginx.conf
@@ -39,6 +39,16 @@ http {
         }
 		
 	}
+    server{
+        listen   81;
+        server_name _;
+		location = /nginx-status {
+			stub_status on;
+			access_log   off;
+			allow 127.0.0.1;
+			deny all;
+		}
+    }
 	client_max_body_size 100M;
 	server_tokens off;	
 	sendfile on;
